backend-lost: добавил total в ответы на поиск с пагинацией
